@@ -44,16 +44,27 @@ under the License.
 
     <modules>
         <module>flink-connector-jdbc</module>
+        <module>flink-connector-jdbc-core</module>
+        <module>flink-connector-jdbc-cratedb</module>
+        <module>flink-connector-jdbc-db2</module>
+        <module>flink-connector-jdbc-mysql</module>
+        <module>flink-connector-jdbc-oceanbase</module>
+        <module>flink-connector-jdbc-oracle</module>
+        <module>flink-connector-jdbc-postgres</module>
+        <module>flink-connector-jdbc-sqlserver</module>
+        <module>flink-connector-jdbc-trino</module>
     </modules>
 
     <properties>
         <flink.version>1.18.0</flink.version>
+        <scala.binary.version>2.12</scala.binary.version>
+        <scala-library.version>2.12.7</scala-library.version>
 
         <jackson-bom.version>2.13.4.20221013</jackson-bom.version>
         <junit4.version>4.13.2</junit4.version>
         <junit5.version>5.10.1</junit5.version>
         <assertj.version>3.24.2</assertj.version>
-        <testcontainers.version>1.19.3</testcontainers.version>
+        <testcontainers.version>1.19.8</testcontainers.version>
         <mockito.version>3.12.4</mockito.version>
 
         <japicmp.referenceVersion>3.0.0-1.16</japicmp.referenceVersion>
@@ -61,11 +72,14 @@ under the License.
         <slf4j.version>1.7.36</slf4j.version>
         <log4j.version>2.17.2</log4j.version>
 
+
         <flink.parent.artifactId>flink-connector-jdbc-parent</flink.parent.artifactId>
-        <flink.forkCountITCase>1</flink.forkCountITCase>
         <!-- These 2 properties should be removed together with upgrade of flink-connector-parent to 1.1.x -->
         <flink.surefire.baseArgLine>-XX:+UseG1GC -Xms256m -XX:+IgnoreUnrecognizedVMOptions ${surefire.module.config}</flink.surefire.baseArgLine>
-        <surefire.module.config/>
+        <surefire.module.config>
+            <!-- required by JdbcExactlyOnceSinkE2eTest --> --add-opens=java.base/java.util=ALL-UNNAMED
+            <!-- SimpleJdbcConnectionProviderDriverClassConcurrentLoadingITCase--> --add-opens=java.base/java.lang=ALL-UNNAMED
+        </surefire.module.config>
         <spotless.skip>false</spotless.skip>
     </properties>
 
@@ -76,6 +90,13 @@ under the License.
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-base</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-table-common</artifactId>
+            <version>${flink.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
         </dependency>
 
         <!-- Logging API -->
@@ -170,6 +191,13 @@ under the License.
     <dependencyManagement>
 
         <dependencies>
+            <!-- For dependency convergence -->
+            <dependency>
+                <groupId>org.scala-lang</groupId>
+                <artifactId>scala-library</artifactId>
+                <version>${scala-library.version}</version>
+            </dependency>
+
             <!-- Flink dependencies -->
 
             <dependency>
